[package]
name = "oh-no"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.6.3"

[dependencies.bevy]
git = "https://github.com/bevyengine/bevy"
rev = "bb59509d44d2979e4b91bd0f998c047f16b89dd0"